# takumi-cli

./: Cargo.toml  README.md  biome.json  install-cli.sh  package.json
.changeset/: icy-taxes-study.md  proud-cases-heal.md  quiet-papayas-train.md  short-buttons-try.md  shy-cougars-watch.md  small-beers-joke.md
.github/workflows/: ci.yml
docs/: package.json
docs/app/components/playground/: component-editor.tsx  playground.tsx
example/cloudflare-workers/: package.json
example/rust/src/: minimal.rs
example/tanstack-start/: package.json
example/twitter-images/: index.tsx
example/twitter-images/components/: 500-stars.tsx  og-image.tsx  package-og-image.tsx  x-post-image.tsx
takumi/: Cargo.toml
takumi-cli/: Cargo.toml
takumi-cli/src/: fonts.rs  html.rs  images.rs  main.rs
takumi-napi-core/: Cargo.toml
takumi-napi-core/src/: lib.rs  render_task.rs
takumi-napi-core/tests/: binary-inputs.test.ts  render.test.ts
takumi-napi-core/tests/bench/: index.tsx
takumi-server/src/: generate_image.rs
takumi-wasm/src/: renderer.rs
takumi/src/layout/: inline.rs  tree.rs
takumi/src/layout/node/: container.rs
takumi/src/layout/style/: stylesheets.rs
takumi/src/layout/style/properties/: color.rs  filter.rs  length.rs  mod.rs  vertical_align.rs
takumi/src/layout/style/tw/: mod.rs
takumi/src/rendering/: inline_drawing.rs  mod.rs  render.rs  write.rs
takumi/src/resources/: image.rs
takumi/tests/: fixtures.rs  test_utils.rs
takumi/tests/fixtures/: deep_nesting.rs  inline.rs  inline_vertical_align.rs  text.rs
