[workspace]
resolver = "3"
members = [
  "takumi",
  "takumi-server",
  "takumi-napi-core",
  "takumi-wasm",
  "takumi-cli",
  "example/rust",
]

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[profile.release.package."takumi-wasm"]
strip = "debuginfo"

# there's some color artifacts issues with zune-image decoder, we have to use a pinned version on dev branch. 
[patch.crates-io.zune-core]
git = "https://github.com/etemesi254/zune-image"
rev = "05a21489ffd6de1e629ce89f51f5cb4d66dd3f0d"

[patch.crates-io.zune-jpeg]
git = "https://github.com/etemesi254/zune-image"
rev = "05a21489ffd6de1e629ce89f51f5cb4d66dd3f0d"
