[package]
name = "takumi-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "CLI tool to render HTML strings or JSON node files to images using takumi."
rust-version = "1.89"

[[bin]]
name = "takumi"
path = "src/main.rs"

[dependencies]
takumi = { path = "../takumi" }
clap = { version = "4", features = ["derive"] }
tl = "0.7"
mimalloc = "0.1"
ureq = "3"
serde_json = "1"
glob = "0.3"
dirs = "6"
